(9) Question preview (when you click on “my questions”): share button - box too long (see issue 8 above re lesson intro)
 && aligning the lesson invites and lesson shares - not so great

--- a/app/styles/_lessonIntro.scss
+++ b/app/styles/_lessonIntro.scss
@@ -452,7 +452,7 @@
         }
         .invite-link{
             textarea {
-                height: 60px;
+                height: 72px;
             }
         }
         .action-embed {
